# packer

./: .cmake_windows.cmake  CMakeLists.txt  README.md
.github/workflows/: Test_windows.yml
cmake/: Packer.cmake  UnPacker.cmake
includes/: csc32.hpp  utils.hpp
includes/exception/: FileException.hpp  MemoryException.hpp
includes/file/: Chunk.hpp  File.hpp
includes/log/: Log.hpp
includes/pack/: Packer.hpp
includes/unpack/: UnPackFile.hpp
sources/: crc32.cpp  main.cpp
sources/exception/: FileException.cpp  MemoryException.cpp
sources/file/: File.cpp
sources/log/: Log.cpp
sources/pack/: Packer.cpp
sources/unpack/: UnPackFile.cpp
sources/utils/: MemAlloc.cpp
